fix: update navbar border color for visibility

--- a/docs/src/css/_navbar.scss
+++ b/docs/src/css/_navbar.scss
@@ -77,7 +77,7 @@
     display: inline-block;
     min-width: 76px;
     height: 34px;
-    border: solid 1px hsl(211, 100%, 40%);
+    border: solid 1px #2f3b49;
 
     svg {
       display: none;
